# http

./: .gitignore  CMakeLists.txt  README.md  config.h  http  main.c
src/: http.c  http.h  parser.c  parser.h  server.c
src/constants/: headers.h
src/core/: http.c  http.h  server.c  server.h
src/utils/: file.c  file.h  logger.c  logger.h  parser.c  parser.h  string.c  string.h
website/: index.html
